# rest-api/controllers/authorization.go
@@ -8,18 +8,19 @@ import (
 	"strconv"
 )
 
-// Authorization godoc
-// @Summary      Check user have permission
-// @Tags         auth
-// @Accept       json
-// @Param        request  body  types.CheckPermissionBody  true  "request body"
-// @Param 		 X-Auth header string true "Authorization"
-// @Security 	 JWTAuth
-// @Produce      json
-// @Success      200  {object}  types.AuthorizeResponse  ""
-// @Failure      400  ""
-// @Failure      500  ""
-// @Router       /user/authorize [post]
+// Authorize godoc
+//
+//	@Summary	Check user have permission
+//	@Tags		auth
+//	@Accept		json
+//	@Param		request	body	types.CheckPermissionBody	true	"request body"
+//	@Param		X-Auth	header	string						true	"Authorization"
+//	@Security	JWTAuth
+//	@Produce	json
+//	@Success	200	{object}	types.AuthorizeResponse	""
+//	@Failure	400	""
+//	@Failure	500	""
+//	@Router		/user/authorize [post]
 func Authorize(w http.ResponseWriter, r *http.Request, ctx *request_context.Context) (int, error) {
 	var body = &types.CheckPermissionBody{}
 	err := json.NewDecoder(r.Body).Decode(&body)
