# rest-api/controllers/master_data.go
@@ -10,15 +10,15 @@ import (
 	"slices"
 )
 
-// @Summary Get resources
-// @Tags permissions
-// @Accept json
-// @Produce json
-// @Param 		 X-Auth header string true "Authorization"
-// @Security 	 JWTAuth
-// @Success 200 {object} []string
-// @Security 	 JWTAuth
-// @Router /master-data/resources [get]
+// @Summary	Get resources
+// @Tags		permissions
+// @Accept		json
+// @Produce	json
+// @Param		X-Auth	header	string	true	"Authorization"
+// @Security	JWTAuth
+// @Success	200	{object}	[]string
+// @Security	JWTAuth
+// @Router		/master-data/resources [get]
 func GetResources(w http.ResponseWriter, r *http.Request, ctx *request_context.Context) (int, error) {
 	loging.Logger.Debugln(ctx.Context.Value(permission_cache.UserPerm))
 	loging.Logger.Debugln("GetResources")
@@ -31,15 +31,15 @@ func GetResources(w http.ResponseWriter, r *http.Request, ctx *request_context.C
 	return 0, nil
 }
 
-// @Summary Get scopes
-// @Tags permissions
-// @Accept json
-// @Produce json
-// @Param 		 X-Auth header string true "Authorization"
-// @Security 	 JWTAuth
-// @Success 200 {object} []string
-// @Security 	 JWTAuth
-// @Router /master-data/scopes [get]
+// @Summary	Get scopes
+// @Tags		permissions
+// @Accept		json
+// @Produce	json
+// @Param		X-Auth	header	string	true	"Authorization"
+// @Security	JWTAuth
+// @Success	200	{object}	[]string
+// @Security	JWTAuth
+// @Router		/master-data/scopes [get]
 func GetScopes(w http.ResponseWriter, r *http.Request, ctx *request_context.Context) (int, error) {
 	loging.Logger.Debugln("GetScopes")
 	currentScope, _ := ctx.GetCurrentScope()
@@ -57,15 +57,15 @@ func GetScopes(w http.ResponseWriter, r *http.Request, ctx *request_context.Cont
 	return 0, nil
 }
 
-// @Summary Get actions
-// @Tags permissions
-// @Accept json
-// @Produce json
-// @Param 		 X-Auth header string true "Authorization"
-// @Security 	 JWTAuth
-// @Success 200 {object} []string
-// @Security 	 JWTAuth
-// @Router /master-data/actions [get]
+// @Summary	Get actions
+// @Tags		permissions
+// @Accept		json
+// @Produce	json
+// @Param		X-Auth	header	string	true	"Authorization"
+// @Security	JWTAuth
+// @Success	200	{object}	[]string
+// @Security	JWTAuth
+// @Router		/master-data/actions [get]
 func GetActions(w http.ResponseWriter, r *http.Request, ctx *request_context.Context) (int, error) {
 	loging.Logger.Debugln("GetActions")
 	w.Header().Set("Content-Type", "application/json")
